Tiger_frontend/project1_test_code_example/tests/correct/function-call-no-params.tiger
main let
        function print ( ) begin
                printi(7);
        end;
in begin
        print();
end
